Fixed bug with overflow in movie-list

--- a/src/components/movie-list/styles.css
+++ b/src/components/movie-list/styles.css
@@ -4,7 +4,6 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  overflow: hidden;
 }
 .list {
   width: 24%;
